# serializer version: 1
# name: TestFunctional.test_edge_height_overshoot[mtf_slice0-5.0-1.5707963267948966]
  10.02735115081997
# ---
# name: TestFunctional.test_edge_height_overshoot[mtf_slice1-10.0-0]
  0.5
# ---
# name: TestFunctional.test_edge_height_overshoot[mtf_slice2-0.0-0.7853981633974483]
  0.5
# ---
# name: TestFunctional.test_edge_response[1.0-mtf_slice0-5.0-1.5707963267948966]
  8.101226271723341
# ---
# name: TestFunctional.test_edge_response[2.0-mtf_slice2-1.0-0.7853981633974483]
  1.2511552058098858
# ---
# name: TestFunctional.test_edge_response[5.0-mtf_slice1-10.0-1.5707963267948966]
  79.00040639407881
# ---
# name: TestFunctional.test_giqe3[1.0-1.0-1.0-2.0-2.0]
  4.034047939178196
# ---
# name: TestFunctional.test_giqe3[2.0-2.0-2.0-1.0-1.0]
  2.5540479391781954
# ---
# name: TestFunctional.test_giqe4[1.0-1.0-1.0-2.0-2.0-0.0]
  tuple(
    -inf,
    inf,
  )
# ---
# name: TestFunctional.test_giqe4[2.0-2.0-2.0-1.0-1.0-1.5707963267948966]
  tuple(
    2.778934116813923,
    2.0,
  )
# ---
# name: TestFunctional.test_giqe5[0.35-0.35-0.52832-50-1.5707963267948966]
  tuple(
    5.015165370148328,
    0.52832,
    0.35,
  )
# ---
# name: TestFunctional.test_giqe5[1.0-1.0-1.0-2.0-20.0]
  tuple(
    3.341217068150002,
    1.0230310532914486,
    1.0,
  )
# ---
# name: TestFunctional.test_giqe5[2.0-2.0-2.0-1.0-90.0]
  tuple(
    2.267751299633085,
    2.05681874276159,
    2.0,
  )
# ---
# name: TestFunctional.test_giqe5_RER[mtf0-5.0-1.5707963267948966-1.5707963267948966]
  tuple(
    array([0.]),
    array([0.]),
  )
# ---
# name: TestFunctional.test_giqe5_RER[mtf1-10.0-0-0]
  tuple(
    array([0.]),
    array([0.]),
  )
# ---
# name: TestFunctional.test_giqe5_RER[mtf2-1.0-0-0.7853981633974483]
  tuple(
    array([0.]),
    array([0.]),
  )
# ---
# name: TestFunctional.test_giqe5_RER[mtf3-0.0-0.7853981633974483-0]
  tuple(
    array([0.]),
    array([0.]),
  )
# ---
# name: TestFunctional.test_ground_resolved_distance[mtf_slice0-1.0-5.0-1.5707963267948966-0.0]
  0.0
# ---
# name: TestFunctional.test_ground_resolved_distance[mtf_slice1-0.0-10.0-0-1.0]
  1000000000000.0
# ---
# name: TestFunctional.test_ground_resolved_distance[mtf_slice2-0.0-1.0-0.7853981633974483-10.0]
  10000000000000.0
# ---
# name: TestFunctional.test_niirs5[sensor0-scenario0-True]
  Metrics(
    atm=array([[5.00000000e-07, 6.39074028e-01, 0.00000000e+00, 0.00000000e+00,
          3.02940000e+07, 2.95430000e+07],
         [5.10000000e-07, 6.47968113e-01, 0.00000000e+00, 0.00000000e+00,
          2.80790000e+07, 2.94200000e+07],
         [5.20000000e-07, 6.57142282e-01, 0.00000000e+00, 0.00000000e+00,
          2.60690000e+07, 2.93540000e+07],
         [5.30000000e-07, 6.65070117e-01, 0.00000000e+00, 0.00000000e+00,
          2.47789980e+07, 2.98579980e+07],
         [5.40000000e-07, 6.72180176e-01, 0.00000000e+00, 0.00000000e+00,
          2.37110000e+07, 3.04150000e+07],
         [5.50000000e-07, 6.79688692e-01, 0.00000000e+00, 0.00000000e+00,
          2.24430000e+07, 3.06429980e+07],
         [5.60000000e-07, 6.85654700e-01, 0.00000000e+00, 0.00000000e+00,
          2.10290000e+07, 3.05270000e+07],
         [5.70000000e-07, 6.89664423e-01, 0.00000000e+00, 0.00000000e+00,
          1.96690000e+07, 3.03069980e+07],
         [5.80000000e-07, 6.91168725e-01, 0.00000000e+00, 1.11339992e-22,
          1.83980000e+07, 2.98870000e+07],
         [5.90000000e-07, 6.93257272e-01, 4.45919972e-22, 3.66219999e-21,
          1.71780000e+07, 2.93490000e+07],
         [6.00000000e-07, 7.04793990e-01, 3.42539975e-21, 2.04039995e-20,
          1.63330000e+07, 2.96869980e+07],
         [6.10000000e-07, 7.19167590e-01, 1.37160003e-20, 7.42199954e-20,
          1.56080000e+07, 3.02270000e+07],
         [6.20000000e-07, 7.25069821e-01, 4.43220013e-20, 2.39480006e-19,
          1.46610000e+07, 2.99590000e+07],
         [6.30000000e-07, 7.27737427e-01, 1.35459989e-19, 7.43379979e-19,
          1.38000000e+07, 2.96080000e+07],
         [6.40000000e-07, 7.30594516e-01, 3.98289972e-19, 2.21200007e-18,
          1.30739990e+07, 2.93050000e+07],
         [6.50000000e-07, 7.33784676e-01, 1.13810002e-18, 6.44529993e-18,
          1.23400000e+07, 2.88770000e+07],
         [6.60000000e-07, 7.43704319e-01, 3.15489994e-18, 1.82690002e-17,
          1.18749990e+07, 2.92559980e+07]]),
    bkg_radiance=array([44080733.33333334, 41808333.33333334, 39767533.33333334,
         38712730.40000001, 37904666.66666667, 36743065.73333333,
         35274933.33333334, 33812265.73333333, 32345266.66666667,
         30874200.        , 30186932.4       , 29713933.33333334,
         28641866.66666667, 27617066.66666667, 26749665.66666667,
         25815933.33333334, 25527798.06666667]),
    cutoff_frequency=550000.0000000001,
    df=11000.0,
    elev_angle=1.5707963267948966,
    gsd_w=0.018,
    gsd_x=0.018,
    ifov_x=2e-06,
    ifov_y=2e-06,
    mtf_wavelengths=array([5.0e-07, 5.1e-07, 5.2e-07, 5.3e-07, 5.4e-07, 5.5e-07, 5.6e-07,
         5.7e-07, 5.8e-07, 5.9e-07, 6.0e-07, 6.1e-07, 6.2e-07, 6.3e-07,
         6.4e-07, 6.5e-07, 6.6e-07]),
    mtf_weights=array([3.57408991e+13, 3.50312897e+13, 3.44285738e+13, 3.45930091e+13,
         3.49160697e+13, 3.48793461e+13, 3.44899766e+13, 3.40300032e+13,
         3.34553739e+13, 3.27931187e+13, 3.29855328e+13, 3.34004816e+13,
         3.30481318e+13, 3.26690108e+13, 3.24008443e+13, 3.20048203e+13,
         3.24293938e+13]),
    name='niirs test_sensor test_scenario',
    niirs=10.05230879223981,
    otf=OTF(
      ap_OTF=array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
      det_OTF=array([[0.00799613, 0.00640561, 0.0047176 , ..., 0.0047176 , 0.00640561,
          0.00799613],
         [0.00640561, 0.00513147, 0.00377922, ..., 0.00377922, 0.00513147,
          0.00640561],
         [0.0047176 , 0.00377922, 0.00278332, ..., 0.00278332, 0.00377922,
          0.0047176 ],
         ...,
         [0.0047176 , 0.00377922, 0.00278332, ..., 0.00278332, 0.00377922,
          0.0047176 ],
         [0.00640561, 0.00513147, 0.00377922, ..., 0.00377922, 0.00513147,
          0.00640561],
         [0.00799613, 0.00640561, 0.0047176 , ..., 0.0047176 , 0.00640561,
          0.00799613]]),
      drft_OTF=array([[1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         ...,
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.]]),
      filter_OTF=array([[1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         ...,
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.]]),
      jit_OTF=array([[1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         ...,
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.]]),
      r0_band=array([0.52491651]),
      system_OTF=array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
      turb_OTF=array([[0.33414746, 0.33849687, 0.34286318, ..., 0.34286318, 0.33849687,
          0.33414746],
         [0.33849687, 0.34295433, 0.34743042, ..., 0.34743042, 0.34295433,
          0.33849687],
         [0.34286318, 0.34743042, 0.35201808, ..., 0.35201808, 0.34743042,
          0.34286318],
         ...,
         [0.34286318, 0.34743042, 0.35201808, ..., 0.35201808, 0.34743042,
          0.34286318],
         [0.33849687, 0.34295433, 0.34743042, ..., 0.34743042, 0.34295433,
          0.33849687],
         [0.33414746, 0.33849687, 0.34286318, ..., 0.34286318, 0.33849687,
          0.33414746]]),
      wav_OTF=array([[1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         ...,
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.]]),
    ),
    radiance_wavelengths=array([5.0e-07, 5.1e-07, 5.2e-07, 5.3e-07, 5.4e-07, 5.5e-07, 5.6e-07,
         5.7e-07, 5.8e-07, 5.9e-07, 6.0e-07, 6.1e-07, 6.2e-07, 6.3e-07,
         6.4e-07, 6.5e-07, 6.6e-07]),
    rer=0.544879982245952,
    rer_0=0.544879982245952,
    rer_90=0.544879982245952,
    scenario=Scenario(
      aircraft_speed=0,
      altitude=9000,
      atm=array([[3.00000000e-07, 1.76796302e-01, 0.00000000e+00, 0.00000000e+00,
          2.80740000e+06, 2.09900000e+05],
         [3.10000000e-07, 2.52727807e-01, 0.00000000e+00, 0.00000000e+00,
          1.16040000e+07, 1.02110000e+06],
         [3.20000000e-07, 3.03913713e-01, 0.00000000e+00, 0.00000000e+00,
          2.61550000e+07, 2.71420000e+06],
         ...,
         [1.39800000e-05, 1.52721005e-02, 4.33390000e+06, 9.57890000e+04,
          2.34340001e-02, 1.54130000e+04],
         [1.39900000e-05, 6.59780018e-03, 4.24260000e+06, 4.13320000e+04,
          1.20540000e-02, 6.72810010e+03],
         [1.40000000e-05, 4.06679977e-03, 4.33760000e+06, 2.54399980e+04,
          1.04609998e-02, 4.17220020e+03]]),
      background_reflectance=0.07,
      background_temperature=293,
      cn2_at_1m=1.7e-14,
      ground_range=0.0,
      ha_wind_speed=21,
      ihaze=1,
      name='test_scenario',
      target_reflectance=0.15,
      target_temperature=295,
    ),
    sensor=Sensor(
      D=0.275,
      L_x=0.275,
      L_y=0.275,
      bit_depth=100.0,
      cold_filter_emissivity=0.0,
      cold_filter_temperature=70.0,
      cold_filter_transmission=1.0,
      cold_shield_temperature=70.0,
      da_x=0.0,
      da_y=0.0,
      dark_current=0,
      eta=0.0,
      f=4,
      filter_kernel=array([1]),
      frame_stacks=1,
      int_time=1,
      max_n=100000000,
      max_well_fill=1.0,
      n_tdi=1.0,
      name='test_sensor',
      opt_trans_wavelengths=array([5.0e-07, 6.6e-07]),
      optics_emissivity=0.0,
      optics_temperature=270.0,
      optics_transmission=array([1., 1.]),
      other_irradiance=0.0,
      other_noise=array([0]),
      p_x=8e-06,
      p_y=8e-06,
      pv=0.0,
      pv_wavelength=6.33e-07,
      qe=array([1., 1.]),
      qe_wavelengths=array([5.0e-07, 6.6e-07]),
      read_noise=0,
      s_x=0.0,
      s_y=0.0,
      w_x=8e-06,
      w_y=8e-06,
    ),
    slant_range=9000.0,
    snr=SNRMetrics(
      bkg_FPA_irradiance=array([163444.84221366, 155019.11896996, 147452.13428603, 143541.08095346,
         140544.90009607, 136237.85556874, 130794.23768126, 125370.88246425,
         119931.46680921, 114476.96909473, 111928.68244099, 110174.87183094,
         106199.80712749, 102400.00023603,  99183.80556638,  95721.66411929,
          94653.301149  ]),
      bkg_n=3630871.75361223,
      bkg_n_rate=3630871.75361223,
      contrast_signal=1761235.5318644675,
      dark_current_noise=0.0,
      int_time=1.0,
      name='signal-to-noise calculation',
      opt_trans=array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.]),
      other_irradiance=array([3.53400472e-163, 1.01354647e-159, 2.13608058e-156, 3.36649683e-153,
         4.03229084e-150, 3.72609095e-147, 2.69359363e-144, 1.54316311e-141,
         7.09134356e-139, 2.64339829e-136, 8.07734762e-134, 2.04316164e-131,
         4.31762846e-129, 7.68819082e-127, 1.16287723e-124, 1.50540578e-122,
         1.67982281e-120]),
      path_noise=1445.6108270315428,
      qe=array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.]),
      quantization_noise=2.2772452799126154e-23,
      scene_noise=1817.2277298802908,
      self_emission_noise=1.3482448561889153e-60,
      signal_noise=2322.0911449546284,
      snr=758.4695956880196,
      tgt_FPA_irradiance=array([221866.74957477, 213197.7912295 , 205500.29014962, 202585.90352206,
         200691.20590077, 196835.0322408 , 191162.02585485, 185303.6120296 ,
         179033.64144623, 172515.23735256, 170635.34889278, 169949.40365927,
         165444.36328737, 160950.44647194, 157135.06289357, 152826.54239389,
         152507.65598475]),
      tgt_n=5392107.285476698,
      tgt_n_rate=5392107.285476698,
      total_noise=2322.0911449546284,
      weights=array([3.57408991e+13, 3.50312897e+13, 3.44285738e+13, 3.45930091e+13,
         3.49160697e+13, 3.48793461e+13, 3.44899766e+13, 3.40300032e+13,
         3.34553739e+13, 3.27931187e+13, 3.29855328e+13, 3.34004816e+13,
         3.30481318e+13, 3.26690108e+13, 3.24008443e+13, 3.20048203e+13,
         3.24293938e+13]),
      well_fraction=0.05392107285476697,
    ),
    tgt_radiance=array([59837000., 57499000., 55423000., 54636996., 54126000., 53085998.,
         51556000., 49975998., 48285000., 46527000., 46019998., 45835000.,
         44620000., 43408000., 42378999., 41217000., 41130997.]),
    uu=array([[-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         ...,
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.]]),
    vv=array([[ 550000.,  550000.,  550000., ...,  550000.,  550000.,  550000.],
         [ 539000.,  539000.,  539000., ...,  539000.,  539000.,  539000.],
         [ 528000.,  528000.,  528000., ...,  528000.,  528000.,  528000.],
         ...,
         [-528000., -528000., -528000., ..., -528000., -528000., -528000.],
         [-539000., -539000., -539000., ..., -539000., -539000., -539000.],
         [-550000., -550000., -550000., ..., -550000., -550000., -550000.]]),
  )
# ---
# name: TestFunctional.test_niirs5[sensor1-scenario1-False]
  Metrics(
    atm=array([[5.00000000e-07, 6.39074028e-01, 0.00000000e+00, 0.00000000e+00,
          3.02940000e+07, 2.95430000e+07],
         [5.10000000e-07, 6.47968113e-01, 0.00000000e+00, 0.00000000e+00,
          2.80790000e+07, 2.94200000e+07],
         [5.20000000e-07, 6.57142282e-01, 0.00000000e+00, 0.00000000e+00,
          2.60690000e+07, 2.93540000e+07],
         [5.30000000e-07, 6.65070117e-01, 0.00000000e+00, 0.00000000e+00,
          2.47789980e+07, 2.98579980e+07],
         [5.40000000e-07, 6.72180176e-01, 0.00000000e+00, 0.00000000e+00,
          2.37110000e+07, 3.04150000e+07],
         [5.50000000e-07, 6.79688692e-01, 0.00000000e+00, 0.00000000e+00,
          2.24430000e+07, 3.06429980e+07],
         [5.60000000e-07, 6.85654700e-01, 0.00000000e+00, 0.00000000e+00,
          2.10290000e+07, 3.05270000e+07],
         [5.70000000e-07, 6.89664423e-01, 0.00000000e+00, 0.00000000e+00,
          1.96690000e+07, 3.03069980e+07],
         [5.80000000e-07, 6.91168725e-01, 0.00000000e+00, 1.11339992e-22,
          1.83980000e+07, 2.98870000e+07],
         [5.90000000e-07, 6.93257272e-01, 4.45919972e-22, 3.66219999e-21,
          1.71780000e+07, 2.93490000e+07],
         [6.00000000e-07, 7.04793990e-01, 3.42539975e-21, 2.04039995e-20,
          1.63330000e+07, 2.96869980e+07],
         [6.10000000e-07, 7.19167590e-01, 1.37160003e-20, 7.42199954e-20,
          1.56080000e+07, 3.02270000e+07],
         [6.20000000e-07, 7.25069821e-01, 4.43220013e-20, 2.39480006e-19,
          1.46610000e+07, 2.99590000e+07],
         [6.30000000e-07, 7.27737427e-01, 1.35459989e-19, 7.43379979e-19,
          1.38000000e+07, 2.96080000e+07],
         [6.40000000e-07, 7.30594516e-01, 3.98289972e-19, 2.21200007e-18,
          1.30739990e+07, 2.93050000e+07],
         [6.50000000e-07, 7.33784676e-01, 1.13810002e-18, 6.44529993e-18,
          1.23400000e+07, 2.88770000e+07],
         [6.60000000e-07, 7.43704319e-01, 3.15489994e-18, 1.82690002e-17,
          1.18749990e+07, 2.92559980e+07]]),
    bkg_radiance=array([44080733.33333334, 41808333.33333334, 39767533.33333334,
         38712730.40000001, 37904666.66666667, 36743065.73333333,
         35274933.33333334, 33812265.73333333, 32345266.66666667,
         30874200.        , 30186932.4       , 29713933.33333334,
         28641866.66666667, 27617066.66666667, 26749665.66666667,
         25815933.33333334, 25527798.06666667]),
    cutoff_frequency=550000.0000000001,
    df=11000.0,
    elev_angle=1.5707963267948966,
    gsd_w=0.018,
    gsd_x=0.018,
    ifov_x=2e-06,
    ifov_y=2e-06,
    mtf_wavelengths=array([5.0e-07, 5.1e-07, 5.2e-07, 5.3e-07, 5.4e-07, 5.5e-07, 5.6e-07,
         5.7e-07, 5.8e-07, 5.9e-07, 6.0e-07, 6.1e-07, 6.2e-07, 6.3e-07,
         6.4e-07, 6.5e-07, 6.6e-07]),
    mtf_weights=array([3.57408991e+13, 3.50312897e+13, 3.44285738e+13, 3.45930091e+13,
         3.49160697e+13, 3.48793461e+13, 3.44899766e+13, 3.40300032e+13,
         3.34553739e+13, 3.27931187e+13, 3.29855328e+13, 3.34004816e+13,
         3.30481318e+13, 3.26690108e+13, 3.24008443e+13, 3.20048203e+13,
         3.24293938e+13]),
    name='niirs test_sensor test_scenario',
    niirs=10.05230879223981,
    otf=OTF(
      ap_OTF=array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
      det_OTF=array([[0.00799613, 0.00640561, 0.0047176 , ..., 0.0047176 , 0.00640561,
          0.00799613],
         [0.00640561, 0.00513147, 0.00377922, ..., 0.00377922, 0.00513147,
          0.00640561],
         [0.0047176 , 0.00377922, 0.00278332, ..., 0.00278332, 0.00377922,
          0.0047176 ],
         ...,
         [0.0047176 , 0.00377922, 0.00278332, ..., 0.00278332, 0.00377922,
          0.0047176 ],
         [0.00640561, 0.00513147, 0.00377922, ..., 0.00377922, 0.00513147,
          0.00640561],
         [0.00799613, 0.00640561, 0.0047176 , ..., 0.0047176 , 0.00640561,
          0.00799613]]),
      drft_OTF=array([[1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         ...,
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.]]),
      filter_OTF=array([[1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         ...,
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.]]),
      jit_OTF=array([[1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         ...,
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.]]),
      r0_band=array([0.52491651]),
      system_OTF=array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
      turb_OTF=array([[0.33414746, 0.33849687, 0.34286318, ..., 0.34286318, 0.33849687,
          0.33414746],
         [0.33849687, 0.34295433, 0.34743042, ..., 0.34743042, 0.34295433,
          0.33849687],
         [0.34286318, 0.34743042, 0.35201808, ..., 0.35201808, 0.34743042,
          0.34286318],
         ...,
         [0.34286318, 0.34743042, 0.35201808, ..., 0.35201808, 0.34743042,
          0.34286318],
         [0.33849687, 0.34295433, 0.34743042, ..., 0.34743042, 0.34295433,
          0.33849687],
         [0.33414746, 0.33849687, 0.34286318, ..., 0.34286318, 0.33849687,
          0.33414746]]),
      wav_OTF=array([[1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         ...,
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.]]),
    ),
    radiance_wavelengths=array([5.0e-07, 5.1e-07, 5.2e-07, 5.3e-07, 5.4e-07, 5.5e-07, 5.6e-07,
         5.7e-07, 5.8e-07, 5.9e-07, 6.0e-07, 6.1e-07, 6.2e-07, 6.3e-07,
         6.4e-07, 6.5e-07, 6.6e-07]),
    rer=0.544879982245952,
    rer_0=0.544879982245952,
    rer_90=0.544879982245952,
    scenario=Scenario(
      aircraft_speed=0,
      altitude=9000,
      atm=array([[3.00000000e-07, 1.76796302e-01, 0.00000000e+00, 0.00000000e+00,
          2.80740000e+06, 2.09900000e+05],
         [3.10000000e-07, 2.52727807e-01, 0.00000000e+00, 0.00000000e+00,
          1.16040000e+07, 1.02110000e+06],
         [3.20000000e-07, 3.03913713e-01, 0.00000000e+00, 0.00000000e+00,
          2.61550000e+07, 2.71420000e+06],
         ...,
         [1.39800000e-05, 1.52721005e-02, 4.33390000e+06, 9.57890000e+04,
          2.34340001e-02, 1.54130000e+04],
         [1.39900000e-05, 6.59780018e-03, 4.24260000e+06, 4.13320000e+04,
          1.20540000e-02, 6.72810010e+03],
         [1.40000000e-05, 4.06679977e-03, 4.33760000e+06, 2.54399980e+04,
          1.04609998e-02, 4.17220020e+03]]),
      background_reflectance=0.07,
      background_temperature=293,
      cn2_at_1m=1.7e-14,
      ground_range=0.0,
      ha_wind_speed=21,
      ihaze=1,
      name='test_scenario',
      target_reflectance=0.15,
      target_temperature=295,
    ),
    sensor=Sensor(
      D=0.275,
      L_x=0.275,
      L_y=0.275,
      bit_depth=100.0,
      cold_filter_emissivity=0.0,
      cold_filter_temperature=70.0,
      cold_filter_transmission=1.0,
      cold_shield_temperature=70.0,
      da_x=0.0,
      da_y=0.0,
      dark_current=0,
      eta=0.0,
      f=4,
      filter_kernel=array([1]),
      frame_stacks=1,
      int_time=1,
      max_n=100000000,
      max_well_fill=1.0,
      n_tdi=1.0,
      name='test_sensor',
      opt_trans_wavelengths=array([5.0e-07, 6.6e-07]),
      optics_emissivity=0.0,
      optics_temperature=270.0,
      optics_transmission=array([1., 1.]),
      other_irradiance=0.0,
      other_noise=array([0]),
      p_x=8e-06,
      p_y=8e-06,
      pv=0.0,
      pv_wavelength=6.33e-07,
      qe=array([1., 1.]),
      qe_wavelengths=array([5.0e-07, 6.6e-07]),
      read_noise=0,
      s_x=0.0,
      s_y=0.0,
      w_x=8e-06,
      w_y=8e-06,
    ),
    slant_range=9000.0,
    snr=SNRMetrics(
      bkg_FPA_irradiance=array([163444.84221366, 155019.11896996, 147452.13428603, 143541.08095346,
         140544.90009607, 136237.85556874, 130794.23768126, 125370.88246425,
         119931.46680921, 114476.96909473, 111928.68244099, 110174.87183094,
         106199.80712749, 102400.00023603,  99183.80556638,  95721.66411929,
          94653.301149  ]),
      bkg_n=3630871.75361223,
      bkg_n_rate=3630871.75361223,
      contrast_signal=1761235.5318644675,
      dark_current_noise=0.0,
      int_time=1.0,
      name='signal-to-noise calculation',
      opt_trans=array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.]),
      other_irradiance=array([3.53400472e-163, 1.01354647e-159, 2.13608058e-156, 3.36649683e-153,
         4.03229084e-150, 3.72609095e-147, 2.69359363e-144, 1.54316311e-141,
         7.09134356e-139, 2.64339829e-136, 8.07734762e-134, 2.04316164e-131,
         4.31762846e-129, 7.68819082e-127, 1.16287723e-124, 1.50540578e-122,
         1.67982281e-120]),
      path_noise=1445.6108270315428,
      qe=array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.]),
      quantization_noise=2.2772452799126154e-23,
      scene_noise=1817.2277298802908,
      self_emission_noise=1.3482448561889153e-60,
      signal_noise=2322.0911449546284,
      snr=758.4695956880196,
      tgt_FPA_irradiance=array([221866.74957477, 213197.7912295 , 205500.29014962, 202585.90352206,
         200691.20590077, 196835.0322408 , 191162.02585485, 185303.6120296 ,
         179033.64144623, 172515.23735256, 170635.34889278, 169949.40365927,
         165444.36328737, 160950.44647194, 157135.06289357, 152826.54239389,
         152507.65598475]),
      tgt_n=5392107.285476698,
      tgt_n_rate=5392107.285476698,
      total_noise=2322.0911449546284,
      weights=array([3.57408991e+13, 3.50312897e+13, 3.44285738e+13, 3.45930091e+13,
         3.49160697e+13, 3.48793461e+13, 3.44899766e+13, 3.40300032e+13,
         3.34553739e+13, 3.27931187e+13, 3.29855328e+13, 3.34004816e+13,
         3.30481318e+13, 3.26690108e+13, 3.24008443e+13, 3.20048203e+13,
         3.24293938e+13]),
      well_fraction=0.05392107285476697,
    ),
    tgt_radiance=array([59837000., 57499000., 55423000., 54636996., 54126000., 53085998.,
         51556000., 49975998., 48285000., 46527000., 46019998., 45835000.,
         44620000., 43408000., 42378999., 41217000., 41130997.]),
    uu=array([[-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         ...,
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.]]),
    vv=array([[ 550000.,  550000.,  550000., ...,  550000.,  550000.,  550000.],
         [ 539000.,  539000.,  539000., ...,  539000.,  539000.,  539000.],
         [ 528000.,  528000.,  528000., ...,  528000.,  528000.,  528000.],
         ...,
         [-528000., -528000., -528000., ..., -528000., -528000., -528000.],
         [-539000., -539000., -539000., ..., -539000., -539000., -539000.],
         [-550000., -550000., -550000., ..., -550000., -550000., -550000.]]),
  )
# ---
# name: TestFunctional.test_niirs5[sensor2-scenario2-None]
  Metrics(
    atm=array([[5.00000000e-07, 6.39074028e-01, 0.00000000e+00, 0.00000000e+00,
          3.02940000e+07, 2.95430000e+07],
         [5.10000000e-07, 6.47968113e-01, 0.00000000e+00, 0.00000000e+00,
          2.80790000e+07, 2.94200000e+07],
         [5.20000000e-07, 6.57142282e-01, 0.00000000e+00, 0.00000000e+00,
          2.60690000e+07, 2.93540000e+07],
         [5.30000000e-07, 6.65070117e-01, 0.00000000e+00, 0.00000000e+00,
          2.47789980e+07, 2.98579980e+07],
         [5.40000000e-07, 6.72180176e-01, 0.00000000e+00, 0.00000000e+00,
          2.37110000e+07, 3.04150000e+07],
         [5.50000000e-07, 6.79688692e-01, 0.00000000e+00, 0.00000000e+00,
          2.24430000e+07, 3.06429980e+07],
         [5.60000000e-07, 6.85654700e-01, 0.00000000e+00, 0.00000000e+00,
          2.10290000e+07, 3.05270000e+07],
         [5.70000000e-07, 6.89664423e-01, 0.00000000e+00, 0.00000000e+00,
          1.96690000e+07, 3.03069980e+07],
         [5.80000000e-07, 6.91168725e-01, 0.00000000e+00, 1.11339992e-22,
          1.83980000e+07, 2.98870000e+07],
         [5.90000000e-07, 6.93257272e-01, 4.45919972e-22, 3.66219999e-21,
          1.71780000e+07, 2.93490000e+07],
         [6.00000000e-07, 7.04793990e-01, 3.42539975e-21, 2.04039995e-20,
          1.63330000e+07, 2.96869980e+07],
         [6.10000000e-07, 7.19167590e-01, 1.37160003e-20, 7.42199954e-20,
          1.56080000e+07, 3.02270000e+07],
         [6.20000000e-07, 7.25069821e-01, 4.43220013e-20, 2.39480006e-19,
          1.46610000e+07, 2.99590000e+07],
         [6.30000000e-07, 7.27737427e-01, 1.35459989e-19, 7.43379979e-19,
          1.38000000e+07, 2.96080000e+07],
         [6.40000000e-07, 7.30594516e-01, 3.98289972e-19, 2.21200007e-18,
          1.30739990e+07, 2.93050000e+07],
         [6.50000000e-07, 7.33784676e-01, 1.13810002e-18, 6.44529993e-18,
          1.23400000e+07, 2.88770000e+07],
         [6.60000000e-07, 7.43704319e-01, 3.15489994e-18, 1.82690002e-17,
          1.18749990e+07, 2.92559980e+07]]),
    bkg_radiance=array([44080733.33333334, 41808333.33333334, 39767533.33333334,
         38712730.40000001, 37904666.66666667, 36743065.73333333,
         35274933.33333334, 33812265.73333333, 32345266.66666667,
         30874200.        , 30186932.4       , 29713933.33333334,
         28641866.66666667, 27617066.66666667, 26749665.66666667,
         25815933.33333334, 25527798.06666667]),
    cutoff_frequency=550000.0000000001,
    df=11000.0,
    elev_angle=1.5707963267948966,
    gsd_w=0.018,
    gsd_x=0.018,
    ifov_x=2e-06,
    ifov_y=2e-06,
    mtf_wavelengths=array([5.0e-07, 5.1e-07, 5.2e-07, 5.3e-07, 5.4e-07, 5.5e-07, 5.6e-07,
         5.7e-07, 5.8e-07, 5.9e-07, 6.0e-07, 6.1e-07, 6.2e-07, 6.3e-07,
         6.4e-07, 6.5e-07, 6.6e-07]),
    mtf_weights=array([3.57408991e+13, 3.50312897e+13, 3.44285738e+13, 3.45930091e+13,
         3.49160697e+13, 3.48793461e+13, 3.44899766e+13, 3.40300032e+13,
         3.34553739e+13, 3.27931187e+13, 3.29855328e+13, 3.34004816e+13,
         3.30481318e+13, 3.26690108e+13, 3.24008443e+13, 3.20048203e+13,
         3.24293938e+13]),
    name='niirs test_sensor test_scenario',
    niirs=10.05230879223981,
    otf=OTF(
      ap_OTF=array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
      det_OTF=array([[0.00799613, 0.00640561, 0.0047176 , ..., 0.0047176 , 0.00640561,
          0.00799613],
         [0.00640561, 0.00513147, 0.00377922, ..., 0.00377922, 0.00513147,
          0.00640561],
         [0.0047176 , 0.00377922, 0.00278332, ..., 0.00278332, 0.00377922,
          0.0047176 ],
         ...,
         [0.0047176 , 0.00377922, 0.00278332, ..., 0.00278332, 0.00377922,
          0.0047176 ],
         [0.00640561, 0.00513147, 0.00377922, ..., 0.00377922, 0.00513147,
          0.00640561],
         [0.00799613, 0.00640561, 0.0047176 , ..., 0.0047176 , 0.00640561,
          0.00799613]]),
      drft_OTF=array([[1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         ...,
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.]]),
      filter_OTF=array([[1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         ...,
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.]]),
      jit_OTF=array([[1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         ...,
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.]]),
      r0_band=array([0.52491651]),
      system_OTF=array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
      turb_OTF=array([[0.33414746, 0.33849687, 0.34286318, ..., 0.34286318, 0.33849687,
          0.33414746],
         [0.33849687, 0.34295433, 0.34743042, ..., 0.34743042, 0.34295433,
          0.33849687],
         [0.34286318, 0.34743042, 0.35201808, ..., 0.35201808, 0.34743042,
          0.34286318],
         ...,
         [0.34286318, 0.34743042, 0.35201808, ..., 0.35201808, 0.34743042,
          0.34286318],
         [0.33849687, 0.34295433, 0.34743042, ..., 0.34743042, 0.34295433,
          0.33849687],
         [0.33414746, 0.33849687, 0.34286318, ..., 0.34286318, 0.33849687,
          0.33414746]]),
      wav_OTF=array([[1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         ...,
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.]]),
    ),
    radiance_wavelengths=array([5.0e-07, 5.1e-07, 5.2e-07, 5.3e-07, 5.4e-07, 5.5e-07, 5.6e-07,
         5.7e-07, 5.8e-07, 5.9e-07, 6.0e-07, 6.1e-07, 6.2e-07, 6.3e-07,
         6.4e-07, 6.5e-07, 6.6e-07]),
    rer=0.544879982245952,
    rer_0=0.544879982245952,
    rer_90=0.544879982245952,
    scenario=Scenario(
      aircraft_speed=0,
      altitude=9000,
      atm=array([[3.00000000e-07, 1.76796302e-01, 0.00000000e+00, 0.00000000e+00,
          2.80740000e+06, 2.09900000e+05],
         [3.10000000e-07, 2.52727807e-01, 0.00000000e+00, 0.00000000e+00,
          1.16040000e+07, 1.02110000e+06],
         [3.20000000e-07, 3.03913713e-01, 0.00000000e+00, 0.00000000e+00,
          2.61550000e+07, 2.71420000e+06],
         ...,
         [1.39800000e-05, 1.52721005e-02, 4.33390000e+06, 9.57890000e+04,
          2.34340001e-02, 1.54130000e+04],
         [1.39900000e-05, 6.59780018e-03, 4.24260000e+06, 4.13320000e+04,
          1.20540000e-02, 6.72810010e+03],
         [1.40000000e-05, 4.06679977e-03, 4.33760000e+06, 2.54399980e+04,
          1.04609998e-02, 4.17220020e+03]]),
      background_reflectance=0.07,
      background_temperature=293,
      cn2_at_1m=1.7e-14,
      ground_range=0.0,
      ha_wind_speed=21,
      ihaze=1,
      name='test_scenario',
      target_reflectance=0.15,
      target_temperature=295,
    ),
    sensor=Sensor(
      D=0.275,
      L_x=0.275,
      L_y=0.275,
      bit_depth=100.0,
      cold_filter_emissivity=0.0,
      cold_filter_temperature=70.0,
      cold_filter_transmission=1.0,
      cold_shield_temperature=70.0,
      da_x=0.0,
      da_y=0.0,
      dark_current=0,
      eta=0.0,
      f=4,
      filter_kernel=array([1]),
      frame_stacks=1,
      int_time=1,
      max_n=100000000,
      max_well_fill=1.0,
      n_tdi=1.0,
      name='test_sensor',
      opt_trans_wavelengths=array([5.0e-07, 6.6e-07]),
      optics_emissivity=0.0,
      optics_temperature=270.0,
      optics_transmission=array([1., 1.]),
      other_irradiance=0.0,
      other_noise=array([0]),
      p_x=8e-06,
      p_y=8e-06,
      pv=0.0,
      pv_wavelength=6.33e-07,
      qe=array([1., 1.]),
      qe_wavelengths=array([5.0e-07, 6.6e-07]),
      read_noise=0,
      s_x=0.0,
      s_y=0.0,
      w_x=8e-06,
      w_y=8e-06,
    ),
    slant_range=9000.0,
    snr=SNRMetrics(
      bkg_FPA_irradiance=array([163444.84221366, 155019.11896996, 147452.13428603, 143541.08095346,
         140544.90009607, 136237.85556874, 130794.23768126, 125370.88246425,
         119931.46680921, 114476.96909473, 111928.68244099, 110174.87183094,
         106199.80712749, 102400.00023603,  99183.80556638,  95721.66411929,
          94653.301149  ]),
      bkg_n=3630871.75361223,
      bkg_n_rate=3630871.75361223,
      contrast_signal=1761235.5318644675,
      dark_current_noise=0.0,
      int_time=1.0,
      name='signal-to-noise calculation',
      opt_trans=array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.]),
      other_irradiance=array([3.53400472e-163, 1.01354647e-159, 2.13608058e-156, 3.36649683e-153,
         4.03229084e-150, 3.72609095e-147, 2.69359363e-144, 1.54316311e-141,
         7.09134356e-139, 2.64339829e-136, 8.07734762e-134, 2.04316164e-131,
         4.31762846e-129, 7.68819082e-127, 1.16287723e-124, 1.50540578e-122,
         1.67982281e-120]),
      path_noise=1445.6108270315428,
      qe=array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.]),
      quantization_noise=2.2772452799126154e-23,
      scene_noise=1817.2277298802908,
      self_emission_noise=1.3482448561889153e-60,
      signal_noise=2322.0911449546284,
      snr=758.4695956880196,
      tgt_FPA_irradiance=array([221866.74957477, 213197.7912295 , 205500.29014962, 202585.90352206,
         200691.20590077, 196835.0322408 , 191162.02585485, 185303.6120296 ,
         179033.64144623, 172515.23735256, 170635.34889278, 169949.40365927,
         165444.36328737, 160950.44647194, 157135.06289357, 152826.54239389,
         152507.65598475]),
      tgt_n=5392107.285476698,
      tgt_n_rate=5392107.285476698,
      total_noise=2322.0911449546284,
      weights=array([3.57408991e+13, 3.50312897e+13, 3.44285738e+13, 3.45930091e+13,
         3.49160697e+13, 3.48793461e+13, 3.44899766e+13, 3.40300032e+13,
         3.34553739e+13, 3.27931187e+13, 3.29855328e+13, 3.34004816e+13,
         3.30481318e+13, 3.26690108e+13, 3.24008443e+13, 3.20048203e+13,
         3.24293938e+13]),
      well_fraction=0.05392107285476697,
    ),
    tgt_radiance=array([59837000., 57499000., 55423000., 54636996., 54126000., 53085998.,
         51556000., 49975998., 48285000., 46527000., 46019998., 45835000.,
         44620000., 43408000., 42378999., 41217000., 41130997.]),
    uu=array([[-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         ...,
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.]]),
    vv=array([[ 550000.,  550000.,  550000., ...,  550000.,  550000.,  550000.],
         [ 539000.,  539000.,  539000., ...,  539000.,  539000.,  539000.],
         [ 528000.,  528000.,  528000., ...,  528000.,  528000.,  528000.],
         ...,
         [-528000., -528000., -528000., ..., -528000., -528000., -528000.],
         [-539000., -539000., -539000., ..., -539000., -539000., -539000.],
         [-550000., -550000., -550000., ..., -550000., -550000., -550000.]]),
  )
# ---
# name: TestFunctional.test_niirs[sensor0-scenario0-True]
  Metrics(
    atm=array([[5.00000000e-07, 6.39074028e-01, 0.00000000e+00, 0.00000000e+00,
          3.02940000e+07, 2.95430000e+07],
         [5.10000000e-07, 6.47968113e-01, 0.00000000e+00, 0.00000000e+00,
          2.80790000e+07, 2.94200000e+07],
         [5.20000000e-07, 6.57142282e-01, 0.00000000e+00, 0.00000000e+00,
          2.60690000e+07, 2.93540000e+07],
         [5.30000000e-07, 6.65070117e-01, 0.00000000e+00, 0.00000000e+00,
          2.47789980e+07, 2.98579980e+07],
         [5.40000000e-07, 6.72180176e-01, 0.00000000e+00, 0.00000000e+00,
          2.37110000e+07, 3.04150000e+07],
         [5.50000000e-07, 6.79688692e-01, 0.00000000e+00, 0.00000000e+00,
          2.24430000e+07, 3.06429980e+07],
         [5.60000000e-07, 6.85654700e-01, 0.00000000e+00, 0.00000000e+00,
          2.10290000e+07, 3.05270000e+07],
         [5.70000000e-07, 6.89664423e-01, 0.00000000e+00, 0.00000000e+00,
          1.96690000e+07, 3.03069980e+07],
         [5.80000000e-07, 6.91168725e-01, 0.00000000e+00, 1.11339992e-22,
          1.83980000e+07, 2.98870000e+07],
         [5.90000000e-07, 6.93257272e-01, 4.45919972e-22, 3.66219999e-21,
          1.71780000e+07, 2.93490000e+07],
         [6.00000000e-07, 7.04793990e-01, 3.42539975e-21, 2.04039995e-20,
          1.63330000e+07, 2.96869980e+07],
         [6.10000000e-07, 7.19167590e-01, 1.37160003e-20, 7.42199954e-20,
          1.56080000e+07, 3.02270000e+07],
         [6.20000000e-07, 7.25069821e-01, 4.43220013e-20, 2.39480006e-19,
          1.46610000e+07, 2.99590000e+07],
         [6.30000000e-07, 7.27737427e-01, 1.35459989e-19, 7.43379979e-19,
          1.38000000e+07, 2.96080000e+07],
         [6.40000000e-07, 7.30594516e-01, 3.98289972e-19, 2.21200007e-18,
          1.30739990e+07, 2.93050000e+07],
         [6.50000000e-07, 7.33784676e-01, 1.13810002e-18, 6.44529993e-18,
          1.23400000e+07, 2.88770000e+07],
         [6.60000000e-07, 7.43704319e-01, 3.15489994e-18, 1.82690002e-17,
          1.18749990e+07, 2.92559980e+07]]),
    bkg_radiance=array([44080733.33333334, 41808333.33333334, 39767533.33333334,
         38712730.40000001, 37904666.66666667, 36743065.73333333,
         35274933.33333334, 33812265.73333333, 32345266.66666667,
         30874200.        , 30186932.4       , 29713933.33333334,
         28641866.66666667, 27617066.66666667, 26749665.66666667,
         25815933.33333334, 25527798.06666667]),
    cutoff_frequency=550000.0000000001,
    df=11000.0,
    eho_gm=0.9331805194877623,
    elev_angle=1.5707963267948966,
    gsd_gm=0.018,
    gsd_gp=0.018,
    gsd_x=0.018,
    gsd_y=0.018,
    ifov_x=2e-06,
    ifov_y=2e-06,
    mtf_wavelengths=array([5.0e-07, 5.1e-07, 5.2e-07, 5.3e-07, 5.4e-07, 5.5e-07, 5.6e-07,
         5.7e-07, 5.8e-07, 5.9e-07, 6.0e-07, 6.1e-07, 6.2e-07, 6.3e-07,
         6.4e-07, 6.5e-07, 6.6e-07]),
    mtf_weights=array([3.57408991e+13, 3.50312897e+13, 3.44285738e+13, 3.45930091e+13,
         3.49160697e+13, 3.48793461e+13, 3.44899766e+13, 3.40300032e+13,
         3.34553739e+13, 3.27931187e+13, 3.29855328e+13, 3.34004816e+13,
         3.30481318e+13, 3.26690108e+13, 3.24008443e+13, 3.20048203e+13,
         3.24293938e+13]),
    name='niirs test_sensor test_scenario',
    ng=1.0,
    niirs=10.048636441352345,
    niirs_4=9.36816615042465,
    otf=OTF(
      ap_OTF=array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
      det_OTF=array([[0.00799613, 0.00640561, 0.0047176 , ..., 0.0047176 , 0.00640561,
          0.00799613],
         [0.00640561, 0.00513147, 0.00377922, ..., 0.00377922, 0.00513147,
          0.00640561],
         [0.0047176 , 0.00377922, 0.00278332, ..., 0.00278332, 0.00377922,
          0.0047176 ],
         ...,
         [0.0047176 , 0.00377922, 0.00278332, ..., 0.00278332, 0.00377922,
          0.0047176 ],
         [0.00640561, 0.00513147, 0.00377922, ..., 0.00377922, 0.00513147,
          0.00640561],
         [0.00799613, 0.00640561, 0.0047176 , ..., 0.0047176 , 0.00640561,
          0.00799613]]),
      drft_OTF=array([[1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         ...,
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.]]),
      filter_OTF=array([[1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         ...,
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.]]),
      jit_OTF=array([[1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         ...,
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.]]),
      r0_band=array([0.52491651]),
      system_OTF=array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
      turb_OTF=array([[0.33414746, 0.33849687, 0.34286318, ..., 0.34286318, 0.33849687,
          0.33414746],
         [0.33849687, 0.34295433, 0.34743042, ..., 0.34743042, 0.34295433,
          0.33849687],
         [0.34286318, 0.34743042, 0.35201808, ..., 0.35201808, 0.34743042,
          0.34286318],
         ...,
         [0.34286318, 0.34743042, 0.35201808, ..., 0.35201808, 0.34743042,
          0.34286318],
         [0.33849687, 0.34295433, 0.34743042, ..., 0.34743042, 0.34295433,
          0.33849687],
         [0.33414746, 0.33849687, 0.34286318, ..., 0.34286318, 0.33849687,
          0.33414746]]),
      wav_OTF=array([[1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         ...,
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.]]),
    ),
    radiance_wavelengths=array([5.0e-07, 5.1e-07, 5.2e-07, 5.3e-07, 5.4e-07, 5.5e-07, 5.6e-07,
         5.7e-07, 5.8e-07, 5.9e-07, 6.0e-07, 6.1e-07, 6.2e-07, 6.3e-07,
         6.4e-07, 6.5e-07, 6.6e-07]),
    rer_gm=0.544879982245952,
    scenario=Scenario(
      aircraft_speed=0,
      altitude=9000,
      atm=array([[3.00000000e-07, 1.76796302e-01, 0.00000000e+00, 0.00000000e+00,
          2.80740000e+06, 2.09900000e+05],
         [3.10000000e-07, 2.52727807e-01, 0.00000000e+00, 0.00000000e+00,
          1.16040000e+07, 1.02110000e+06],
         [3.20000000e-07, 3.03913713e-01, 0.00000000e+00, 0.00000000e+00,
          2.61550000e+07, 2.71420000e+06],
         ...,
         [1.39800000e-05, 1.52721005e-02, 4.33390000e+06, 9.57890000e+04,
          2.34340001e-02, 1.54130000e+04],
         [1.39900000e-05, 6.59780018e-03, 4.24260000e+06, 4.13320000e+04,
          1.20540000e-02, 6.72810010e+03],
         [1.40000000e-05, 4.06679977e-03, 4.33760000e+06, 2.54399980e+04,
          1.04609998e-02, 4.17220020e+03]]),
      background_reflectance=0.07,
      background_temperature=293,
      cn2_at_1m=1.7e-14,
      ground_range=0.0,
      ha_wind_speed=21,
      ihaze=1,
      name='test_scenario',
      target_reflectance=0.15,
      target_temperature=295,
    ),
    sensor=Sensor(
      D=0.275,
      L_x=0.275,
      L_y=0.275,
      bit_depth=100.0,
      cold_filter_emissivity=0.0,
      cold_filter_temperature=70.0,
      cold_filter_transmission=1.0,
      cold_shield_temperature=70.0,
      da_x=0.0,
      da_y=0.0,
      dark_current=0,
      eta=0.0,
      f=4,
      filter_kernel=array([1]),
      frame_stacks=1,
      int_time=1,
      max_n=100000000,
      max_well_fill=1.0,
      n_tdi=1.0,
      name='test_sensor',
      opt_trans_wavelengths=array([5.0e-07, 6.6e-07]),
      optics_emissivity=0.0,
      optics_temperature=270.0,
      optics_transmission=array([1., 1.]),
      other_irradiance=0.0,
      other_noise=array([0]),
      p_x=8e-06,
      p_y=8e-06,
      pv=0.0,
      pv_wavelength=6.33e-07,
      qe=array([1., 1.]),
      qe_wavelengths=array([5.0e-07, 6.6e-07]),
      read_noise=0,
      s_x=0.0,
      s_y=0.0,
      w_x=8e-06,
      w_y=8e-06,
    ),
    slant_range=9000.0,
    snr=SNRMetrics(
      bkg_FPA_irradiance=array([163444.84221366, 155019.11896996, 147452.13428603, 143541.08095346,
         140544.90009607, 136237.85556874, 130794.23768126, 125370.88246425,
         119931.46680921, 114476.96909473, 111928.68244099, 110174.87183094,
         106199.80712749, 102400.00023603,  99183.80556638,  95721.66411929,
          94653.301149  ]),
      bkg_n=3630871.75361223,
      bkg_n_rate=3630871.75361223,
      contrast_signal=1761235.5318644675,
      dark_current_noise=0.0,
      int_time=1.0,
      name='signal-to-noise calculation',
      opt_trans=array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.]),
      other_irradiance=array([3.53400472e-163, 1.01354647e-159, 2.13608058e-156, 3.36649683e-153,
         4.03229084e-150, 3.72609095e-147, 2.69359363e-144, 1.54316311e-141,
         7.09134356e-139, 2.64339829e-136, 8.07734762e-134, 2.04316164e-131,
         4.31762846e-129, 7.68819082e-127, 1.16287723e-124, 1.50540578e-122,
         1.67982281e-120]),
      path_noise=1445.6108270315428,
      qe=array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.]),
      quantization_noise=2.2772452799126154e-23,
      scene_noise=1817.2277298802908,
      self_emission_noise=1.3482448561889153e-60,
      signal_noise=2322.0911449546284,
      snr=758.4695956880196,
      tgt_FPA_irradiance=array([221866.74957477, 213197.7912295 , 205500.29014962, 202585.90352206,
         200691.20590077, 196835.0322408 , 191162.02585485, 185303.6120296 ,
         179033.64144623, 172515.23735256, 170635.34889278, 169949.40365927,
         165444.36328737, 160950.44647194, 157135.06289357, 152826.54239389,
         152507.65598475]),
      tgt_n=5392107.285476698,
      tgt_n_rate=5392107.285476698,
      total_noise=2322.0911449546284,
      weights=array([3.57408991e+13, 3.50312897e+13, 3.44285738e+13, 3.45930091e+13,
         3.49160697e+13, 3.48793461e+13, 3.44899766e+13, 3.40300032e+13,
         3.34553739e+13, 3.27931187e+13, 3.29855328e+13, 3.34004816e+13,
         3.30481318e+13, 3.26690108e+13, 3.24008443e+13, 3.20048203e+13,
         3.24293938e+13]),
      well_fraction=0.05392107285476697,
    ),
    tgt_radiance=array([59837000., 57499000., 55423000., 54636996., 54126000., 53085998.,
         51556000., 49975998., 48285000., 46527000., 46019998., 45835000.,
         44620000., 43408000., 42378999., 41217000., 41130997.]),
    uu=array([[-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         ...,
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.]]),
    vv=array([[ 550000.,  550000.,  550000., ...,  550000.,  550000.,  550000.],
         [ 539000.,  539000.,  539000., ...,  539000.,  539000.,  539000.],
         [ 528000.,  528000.,  528000., ...,  528000.,  528000.,  528000.],
         ...,
         [-528000., -528000., -528000., ..., -528000., -528000., -528000.],
         [-539000., -539000., -539000., ..., -539000., -539000., -539000.],
         [-550000., -550000., -550000., ..., -550000., -550000., -550000.]]),
  )
# ---
# name: TestFunctional.test_niirs[sensor1-scenario1-False]
  Metrics(
    atm=array([[5.00000000e-07, 6.39074028e-01, 0.00000000e+00, 0.00000000e+00,
          3.02940000e+07, 2.95430000e+07],
         [5.10000000e-07, 6.47968113e-01, 0.00000000e+00, 0.00000000e+00,
          2.80790000e+07, 2.94200000e+07],
         [5.20000000e-07, 6.57142282e-01, 0.00000000e+00, 0.00000000e+00,
          2.60690000e+07, 2.93540000e+07],
         [5.30000000e-07, 6.65070117e-01, 0.00000000e+00, 0.00000000e+00,
          2.47789980e+07, 2.98579980e+07],
         [5.40000000e-07, 6.72180176e-01, 0.00000000e+00, 0.00000000e+00,
          2.37110000e+07, 3.04150000e+07],
         [5.50000000e-07, 6.79688692e-01, 0.00000000e+00, 0.00000000e+00,
          2.24430000e+07, 3.06429980e+07],
         [5.60000000e-07, 6.85654700e-01, 0.00000000e+00, 0.00000000e+00,
          2.10290000e+07, 3.05270000e+07],
         [5.70000000e-07, 6.89664423e-01, 0.00000000e+00, 0.00000000e+00,
          1.96690000e+07, 3.03069980e+07],
         [5.80000000e-07, 6.91168725e-01, 0.00000000e+00, 1.11339992e-22,
          1.83980000e+07, 2.98870000e+07],
         [5.90000000e-07, 6.93257272e-01, 4.45919972e-22, 3.66219999e-21,
          1.71780000e+07, 2.93490000e+07],
         [6.00000000e-07, 7.04793990e-01, 3.42539975e-21, 2.04039995e-20,
          1.63330000e+07, 2.96869980e+07],
         [6.10000000e-07, 7.19167590e-01, 1.37160003e-20, 7.42199954e-20,
          1.56080000e+07, 3.02270000e+07],
         [6.20000000e-07, 7.25069821e-01, 4.43220013e-20, 2.39480006e-19,
          1.46610000e+07, 2.99590000e+07],
         [6.30000000e-07, 7.27737427e-01, 1.35459989e-19, 7.43379979e-19,
          1.38000000e+07, 2.96080000e+07],
         [6.40000000e-07, 7.30594516e-01, 3.98289972e-19, 2.21200007e-18,
          1.30739990e+07, 2.93050000e+07],
         [6.50000000e-07, 7.33784676e-01, 1.13810002e-18, 6.44529993e-18,
          1.23400000e+07, 2.88770000e+07],
         [6.60000000e-07, 7.43704319e-01, 3.15489994e-18, 1.82690002e-17,
          1.18749990e+07, 2.92559980e+07]]),
    bkg_radiance=array([44080733.33333334, 41808333.33333334, 39767533.33333334,
         38712730.40000001, 37904666.66666667, 36743065.73333333,
         35274933.33333334, 33812265.73333333, 32345266.66666667,
         30874200.        , 30186932.4       , 29713933.33333334,
         28641866.66666667, 27617066.66666667, 26749665.66666667,
         25815933.33333334, 25527798.06666667]),
    cutoff_frequency=550000.0000000001,
    df=11000.0,
    eho_gm=0.9331805194877623,
    elev_angle=1.5707963267948966,
    gsd_gm=0.018,
    gsd_gp=0.018,
    gsd_x=0.018,
    gsd_y=0.018,
    ifov_x=2e-06,
    ifov_y=2e-06,
    mtf_wavelengths=array([5.0e-07, 5.1e-07, 5.2e-07, 5.3e-07, 5.4e-07, 5.5e-07, 5.6e-07,
         5.7e-07, 5.8e-07, 5.9e-07, 6.0e-07, 6.1e-07, 6.2e-07, 6.3e-07,
         6.4e-07, 6.5e-07, 6.6e-07]),
    mtf_weights=array([3.57408991e+13, 3.50312897e+13, 3.44285738e+13, 3.45930091e+13,
         3.49160697e+13, 3.48793461e+13, 3.44899766e+13, 3.40300032e+13,
         3.34553739e+13, 3.27931187e+13, 3.29855328e+13, 3.34004816e+13,
         3.30481318e+13, 3.26690108e+13, 3.24008443e+13, 3.20048203e+13,
         3.24293938e+13]),
    name='niirs test_sensor test_scenario',
    ng=1.0,
    niirs=10.048636441352345,
    niirs_4=9.36816615042465,
    otf=OTF(
      ap_OTF=array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
      det_OTF=array([[0.00799613, 0.00640561, 0.0047176 , ..., 0.0047176 , 0.00640561,
          0.00799613],
         [0.00640561, 0.00513147, 0.00377922, ..., 0.00377922, 0.00513147,
          0.00640561],
         [0.0047176 , 0.00377922, 0.00278332, ..., 0.00278332, 0.00377922,
          0.0047176 ],
         ...,
         [0.0047176 , 0.00377922, 0.00278332, ..., 0.00278332, 0.00377922,
          0.0047176 ],
         [0.00640561, 0.00513147, 0.00377922, ..., 0.00377922, 0.00513147,
          0.00640561],
         [0.00799613, 0.00640561, 0.0047176 , ..., 0.0047176 , 0.00640561,
          0.00799613]]),
      drft_OTF=array([[1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         ...,
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.]]),
      filter_OTF=array([[1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         ...,
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.]]),
      jit_OTF=array([[1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         ...,
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.]]),
      r0_band=array([0.52491651]),
      system_OTF=array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
      turb_OTF=array([[0.33414746, 0.33849687, 0.34286318, ..., 0.34286318, 0.33849687,
          0.33414746],
         [0.33849687, 0.34295433, 0.34743042, ..., 0.34743042, 0.34295433,
          0.33849687],
         [0.34286318, 0.34743042, 0.35201808, ..., 0.35201808, 0.34743042,
          0.34286318],
         ...,
         [0.34286318, 0.34743042, 0.35201808, ..., 0.35201808, 0.34743042,
          0.34286318],
         [0.33849687, 0.34295433, 0.34743042, ..., 0.34743042, 0.34295433,
          0.33849687],
         [0.33414746, 0.33849687, 0.34286318, ..., 0.34286318, 0.33849687,
          0.33414746]]),
      wav_OTF=array([[1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         ...,
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.]]),
    ),
    radiance_wavelengths=array([5.0e-07, 5.1e-07, 5.2e-07, 5.3e-07, 5.4e-07, 5.5e-07, 5.6e-07,
         5.7e-07, 5.8e-07, 5.9e-07, 6.0e-07, 6.1e-07, 6.2e-07, 6.3e-07,
         6.4e-07, 6.5e-07, 6.6e-07]),
    rer_gm=0.544879982245952,
    scenario=Scenario(
      aircraft_speed=0,
      altitude=9000,
      atm=array([[3.00000000e-07, 1.76796302e-01, 0.00000000e+00, 0.00000000e+00,
          2.80740000e+06, 2.09900000e+05],
         [3.10000000e-07, 2.52727807e-01, 0.00000000e+00, 0.00000000e+00,
          1.16040000e+07, 1.02110000e+06],
         [3.20000000e-07, 3.03913713e-01, 0.00000000e+00, 0.00000000e+00,
          2.61550000e+07, 2.71420000e+06],
         ...,
         [1.39800000e-05, 1.52721005e-02, 4.33390000e+06, 9.57890000e+04,
          2.34340001e-02, 1.54130000e+04],
         [1.39900000e-05, 6.59780018e-03, 4.24260000e+06, 4.13320000e+04,
          1.20540000e-02, 6.72810010e+03],
         [1.40000000e-05, 4.06679977e-03, 4.33760000e+06, 2.54399980e+04,
          1.04609998e-02, 4.17220020e+03]]),
      background_reflectance=0.07,
      background_temperature=293,
      cn2_at_1m=1.7e-14,
      ground_range=0.0,
      ha_wind_speed=21,
      ihaze=1,
      name='test_scenario',
      target_reflectance=0.15,
      target_temperature=295,
    ),
    sensor=Sensor(
      D=0.275,
      L_x=0.275,
      L_y=0.275,
      bit_depth=100.0,
      cold_filter_emissivity=0.0,
      cold_filter_temperature=70.0,
      cold_filter_transmission=1.0,
      cold_shield_temperature=70.0,
      da_x=0.0,
      da_y=0.0,
      dark_current=0,
      eta=0.0,
      f=4,
      filter_kernel=array([1]),
      frame_stacks=1,
      int_time=1,
      max_n=100000000,
      max_well_fill=1.0,
      n_tdi=1.0,
      name='test_sensor',
      opt_trans_wavelengths=array([5.0e-07, 6.6e-07]),
      optics_emissivity=0.0,
      optics_temperature=270.0,
      optics_transmission=array([1., 1.]),
      other_irradiance=0.0,
      other_noise=array([0]),
      p_x=8e-06,
      p_y=8e-06,
      pv=0.0,
      pv_wavelength=6.33e-07,
      qe=array([1., 1.]),
      qe_wavelengths=array([5.0e-07, 6.6e-07]),
      read_noise=0,
      s_x=0.0,
      s_y=0.0,
      w_x=8e-06,
      w_y=8e-06,
    ),
    slant_range=9000.0,
    snr=SNRMetrics(
      bkg_FPA_irradiance=array([163444.84221366, 155019.11896996, 147452.13428603, 143541.08095346,
         140544.90009607, 136237.85556874, 130794.23768126, 125370.88246425,
         119931.46680921, 114476.96909473, 111928.68244099, 110174.87183094,
         106199.80712749, 102400.00023603,  99183.80556638,  95721.66411929,
          94653.301149  ]),
      bkg_n=3630871.75361223,
      bkg_n_rate=3630871.75361223,
      contrast_signal=1761235.5318644675,
      dark_current_noise=0.0,
      int_time=1.0,
      name='signal-to-noise calculation',
      opt_trans=array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.]),
      other_irradiance=array([3.53400472e-163, 1.01354647e-159, 2.13608058e-156, 3.36649683e-153,
         4.03229084e-150, 3.72609095e-147, 2.69359363e-144, 1.54316311e-141,
         7.09134356e-139, 2.64339829e-136, 8.07734762e-134, 2.04316164e-131,
         4.31762846e-129, 7.68819082e-127, 1.16287723e-124, 1.50540578e-122,
         1.67982281e-120]),
      path_noise=1445.6108270315428,
      qe=array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.]),
      quantization_noise=2.2772452799126154e-23,
      scene_noise=1817.2277298802908,
      self_emission_noise=1.3482448561889153e-60,
      signal_noise=2322.0911449546284,
      snr=758.4695956880196,
      tgt_FPA_irradiance=array([221866.74957477, 213197.7912295 , 205500.29014962, 202585.90352206,
         200691.20590077, 196835.0322408 , 191162.02585485, 185303.6120296 ,
         179033.64144623, 172515.23735256, 170635.34889278, 169949.40365927,
         165444.36328737, 160950.44647194, 157135.06289357, 152826.54239389,
         152507.65598475]),
      tgt_n=5392107.285476698,
      tgt_n_rate=5392107.285476698,
      total_noise=2322.0911449546284,
      weights=array([3.57408991e+13, 3.50312897e+13, 3.44285738e+13, 3.45930091e+13,
         3.49160697e+13, 3.48793461e+13, 3.44899766e+13, 3.40300032e+13,
         3.34553739e+13, 3.27931187e+13, 3.29855328e+13, 3.34004816e+13,
         3.30481318e+13, 3.26690108e+13, 3.24008443e+13, 3.20048203e+13,
         3.24293938e+13]),
      well_fraction=0.05392107285476697,
    ),
    tgt_radiance=array([59837000., 57499000., 55423000., 54636996., 54126000., 53085998.,
         51556000., 49975998., 48285000., 46527000., 46019998., 45835000.,
         44620000., 43408000., 42378999., 41217000., 41130997.]),
    uu=array([[-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         ...,
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.]]),
    vv=array([[ 550000.,  550000.,  550000., ...,  550000.,  550000.,  550000.],
         [ 539000.,  539000.,  539000., ...,  539000.,  539000.,  539000.],
         [ 528000.,  528000.,  528000., ...,  528000.,  528000.,  528000.],
         ...,
         [-528000., -528000., -528000., ..., -528000., -528000., -528000.],
         [-539000., -539000., -539000., ..., -539000., -539000., -539000.],
         [-550000., -550000., -550000., ..., -550000., -550000., -550000.]]),
  )
# ---
# name: TestFunctional.test_niirs[sensor2-scenario2-None]
  Metrics(
    atm=array([[5.00000000e-07, 6.39074028e-01, 0.00000000e+00, 0.00000000e+00,
          3.02940000e+07, 2.95430000e+07],
         [5.10000000e-07, 6.47968113e-01, 0.00000000e+00, 0.00000000e+00,
          2.80790000e+07, 2.94200000e+07],
         [5.20000000e-07, 6.57142282e-01, 0.00000000e+00, 0.00000000e+00,
          2.60690000e+07, 2.93540000e+07],
         [5.30000000e-07, 6.65070117e-01, 0.00000000e+00, 0.00000000e+00,
          2.47789980e+07, 2.98579980e+07],
         [5.40000000e-07, 6.72180176e-01, 0.00000000e+00, 0.00000000e+00,
          2.37110000e+07, 3.04150000e+07],
         [5.50000000e-07, 6.79688692e-01, 0.00000000e+00, 0.00000000e+00,
          2.24430000e+07, 3.06429980e+07],
         [5.60000000e-07, 6.85654700e-01, 0.00000000e+00, 0.00000000e+00,
          2.10290000e+07, 3.05270000e+07],
         [5.70000000e-07, 6.89664423e-01, 0.00000000e+00, 0.00000000e+00,
          1.96690000e+07, 3.03069980e+07],
         [5.80000000e-07, 6.91168725e-01, 0.00000000e+00, 1.11339992e-22,
          1.83980000e+07, 2.98870000e+07],
         [5.90000000e-07, 6.93257272e-01, 4.45919972e-22, 3.66219999e-21,
          1.71780000e+07, 2.93490000e+07],
         [6.00000000e-07, 7.04793990e-01, 3.42539975e-21, 2.04039995e-20,
          1.63330000e+07, 2.96869980e+07],
         [6.10000000e-07, 7.19167590e-01, 1.37160003e-20, 7.42199954e-20,
          1.56080000e+07, 3.02270000e+07],
         [6.20000000e-07, 7.25069821e-01, 4.43220013e-20, 2.39480006e-19,
          1.46610000e+07, 2.99590000e+07],
         [6.30000000e-07, 7.27737427e-01, 1.35459989e-19, 7.43379979e-19,
          1.38000000e+07, 2.96080000e+07],
         [6.40000000e-07, 7.30594516e-01, 3.98289972e-19, 2.21200007e-18,
          1.30739990e+07, 2.93050000e+07],
         [6.50000000e-07, 7.33784676e-01, 1.13810002e-18, 6.44529993e-18,
          1.23400000e+07, 2.88770000e+07],
         [6.60000000e-07, 7.43704319e-01, 3.15489994e-18, 1.82690002e-17,
          1.18749990e+07, 2.92559980e+07]]),
    bkg_radiance=array([44080733.33333334, 41808333.33333334, 39767533.33333334,
         38712730.40000001, 37904666.66666667, 36743065.73333333,
         35274933.33333334, 33812265.73333333, 32345266.66666667,
         30874200.        , 30186932.4       , 29713933.33333334,
         28641866.66666667, 27617066.66666667, 26749665.66666667,
         25815933.33333334, 25527798.06666667]),
    cutoff_frequency=550000.0000000001,
    df=11000.0,
    eho_gm=0.9331805194877623,
    elev_angle=1.5707963267948966,
    gsd_gm=0.018,
    gsd_gp=0.018,
    gsd_x=0.018,
    gsd_y=0.018,
    ifov_x=2e-06,
    ifov_y=2e-06,
    mtf_wavelengths=array([5.0e-07, 5.1e-07, 5.2e-07, 5.3e-07, 5.4e-07, 5.5e-07, 5.6e-07,
         5.7e-07, 5.8e-07, 5.9e-07, 6.0e-07, 6.1e-07, 6.2e-07, 6.3e-07,
         6.4e-07, 6.5e-07, 6.6e-07]),
    mtf_weights=array([3.57408991e+13, 3.50312897e+13, 3.44285738e+13, 3.45930091e+13,
         3.49160697e+13, 3.48793461e+13, 3.44899766e+13, 3.40300032e+13,
         3.34553739e+13, 3.27931187e+13, 3.29855328e+13, 3.34004816e+13,
         3.30481318e+13, 3.26690108e+13, 3.24008443e+13, 3.20048203e+13,
         3.24293938e+13]),
    name='niirs test_sensor test_scenario',
    ng=1.0,
    niirs=10.048636441352345,
    niirs_4=9.36816615042465,
    otf=OTF(
      ap_OTF=array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
      det_OTF=array([[0.00799613, 0.00640561, 0.0047176 , ..., 0.0047176 , 0.00640561,
          0.00799613],
         [0.00640561, 0.00513147, 0.00377922, ..., 0.00377922, 0.00513147,
          0.00640561],
         [0.0047176 , 0.00377922, 0.00278332, ..., 0.00278332, 0.00377922,
          0.0047176 ],
         ...,
         [0.0047176 , 0.00377922, 0.00278332, ..., 0.00278332, 0.00377922,
          0.0047176 ],
         [0.00640561, 0.00513147, 0.00377922, ..., 0.00377922, 0.00513147,
          0.00640561],
         [0.00799613, 0.00640561, 0.0047176 , ..., 0.0047176 , 0.00640561,
          0.00799613]]),
      drft_OTF=array([[1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         ...,
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.]]),
      filter_OTF=array([[1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         ...,
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.]]),
      jit_OTF=array([[1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         ...,
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.]]),
      r0_band=array([0.52491651]),
      system_OTF=array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
      turb_OTF=array([[0.33414746, 0.33849687, 0.34286318, ..., 0.34286318, 0.33849687,
          0.33414746],
         [0.33849687, 0.34295433, 0.34743042, ..., 0.34743042, 0.34295433,
          0.33849687],
         [0.34286318, 0.34743042, 0.35201808, ..., 0.35201808, 0.34743042,
          0.34286318],
         ...,
         [0.34286318, 0.34743042, 0.35201808, ..., 0.35201808, 0.34743042,
          0.34286318],
         [0.33849687, 0.34295433, 0.34743042, ..., 0.34743042, 0.34295433,
          0.33849687],
         [0.33414746, 0.33849687, 0.34286318, ..., 0.34286318, 0.33849687,
          0.33414746]]),
      wav_OTF=array([[1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         ...,
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.],
         [1., 1., 1., ..., 1., 1., 1.]]),
    ),
    radiance_wavelengths=array([5.0e-07, 5.1e-07, 5.2e-07, 5.3e-07, 5.4e-07, 5.5e-07, 5.6e-07,
         5.7e-07, 5.8e-07, 5.9e-07, 6.0e-07, 6.1e-07, 6.2e-07, 6.3e-07,
         6.4e-07, 6.5e-07, 6.6e-07]),
    rer_gm=0.544879982245952,
    scenario=Scenario(
      aircraft_speed=0,
      altitude=9000,
      atm=array([[3.00000000e-07, 1.76796302e-01, 0.00000000e+00, 0.00000000e+00,
          2.80740000e+06, 2.09900000e+05],
         [3.10000000e-07, 2.52727807e-01, 0.00000000e+00, 0.00000000e+00,
          1.16040000e+07, 1.02110000e+06],
         [3.20000000e-07, 3.03913713e-01, 0.00000000e+00, 0.00000000e+00,
          2.61550000e+07, 2.71420000e+06],
         ...,
         [1.39800000e-05, 1.52721005e-02, 4.33390000e+06, 9.57890000e+04,
          2.34340001e-02, 1.54130000e+04],
         [1.39900000e-05, 6.59780018e-03, 4.24260000e+06, 4.13320000e+04,
          1.20540000e-02, 6.72810010e+03],
         [1.40000000e-05, 4.06679977e-03, 4.33760000e+06, 2.54399980e+04,
          1.04609998e-02, 4.17220020e+03]]),
      background_reflectance=0.07,
      background_temperature=293,
      cn2_at_1m=1.7e-14,
      ground_range=0.0,
      ha_wind_speed=21,
      ihaze=1,
      name='test_scenario',
      target_reflectance=0.15,
      target_temperature=295,
    ),
    sensor=Sensor(
      D=0.275,
      L_x=0.275,
      L_y=0.275,
      bit_depth=100.0,
      cold_filter_emissivity=0.0,
      cold_filter_temperature=70.0,
      cold_filter_transmission=1.0,
      cold_shield_temperature=70.0,
      da_x=0.0,
      da_y=0.0,
      dark_current=0,
      eta=0.0,
      f=4,
      filter_kernel=array([1]),
      frame_stacks=1,
      int_time=1,
      max_n=100000000,
      max_well_fill=1.0,
      n_tdi=1.0,
      name='test_sensor',
      opt_trans_wavelengths=array([5.0e-07, 6.6e-07]),
      optics_emissivity=0.0,
      optics_temperature=270.0,
      optics_transmission=array([1., 1.]),
      other_irradiance=0.0,
      other_noise=array([0]),
      p_x=8e-06,
      p_y=8e-06,
      pv=0.0,
      pv_wavelength=6.33e-07,
      qe=array([1., 1.]),
      qe_wavelengths=array([5.0e-07, 6.6e-07]),
      read_noise=0,
      s_x=0.0,
      s_y=0.0,
      w_x=8e-06,
      w_y=8e-06,
    ),
    slant_range=9000.0,
    snr=SNRMetrics(
      bkg_FPA_irradiance=array([163444.84221366, 155019.11896996, 147452.13428603, 143541.08095346,
         140544.90009607, 136237.85556874, 130794.23768126, 125370.88246425,
         119931.46680921, 114476.96909473, 111928.68244099, 110174.87183094,
         106199.80712749, 102400.00023603,  99183.80556638,  95721.66411929,
          94653.301149  ]),
      bkg_n=3630871.75361223,
      bkg_n_rate=3630871.75361223,
      contrast_signal=1761235.5318644675,
      dark_current_noise=0.0,
      int_time=1.0,
      name='signal-to-noise calculation',
      opt_trans=array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.]),
      other_irradiance=array([3.53400472e-163, 1.01354647e-159, 2.13608058e-156, 3.36649683e-153,
         4.03229084e-150, 3.72609095e-147, 2.69359363e-144, 1.54316311e-141,
         7.09134356e-139, 2.64339829e-136, 8.07734762e-134, 2.04316164e-131,
         4.31762846e-129, 7.68819082e-127, 1.16287723e-124, 1.50540578e-122,
         1.67982281e-120]),
      path_noise=1445.6108270315428,
      qe=array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.]),
      quantization_noise=2.2772452799126154e-23,
      scene_noise=1817.2277298802908,
      self_emission_noise=1.3482448561889153e-60,
      signal_noise=2322.0911449546284,
      snr=758.4695956880196,
      tgt_FPA_irradiance=array([221866.74957477, 213197.7912295 , 205500.29014962, 202585.90352206,
         200691.20590077, 196835.0322408 , 191162.02585485, 185303.6120296 ,
         179033.64144623, 172515.23735256, 170635.34889278, 169949.40365927,
         165444.36328737, 160950.44647194, 157135.06289357, 152826.54239389,
         152507.65598475]),
      tgt_n=5392107.285476698,
      tgt_n_rate=5392107.285476698,
      total_noise=2322.0911449546284,
      weights=array([3.57408991e+13, 3.50312897e+13, 3.44285738e+13, 3.45930091e+13,
         3.49160697e+13, 3.48793461e+13, 3.44899766e+13, 3.40300032e+13,
         3.34553739e+13, 3.27931187e+13, 3.29855328e+13, 3.34004816e+13,
         3.30481318e+13, 3.26690108e+13, 3.24008443e+13, 3.20048203e+13,
         3.24293938e+13]),
      well_fraction=0.05392107285476697,
    ),
    tgt_radiance=array([59837000., 57499000., 55423000., 54636996., 54126000., 53085998.,
         51556000., 49975998., 48285000., 46527000., 46019998., 45835000.,
         44620000., 43408000., 42378999., 41217000., 41130997.]),
    uu=array([[-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         ...,
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.],
         [-550000., -539000., -528000., ...,  528000.,  539000.,  550000.]]),
    vv=array([[ 550000.,  550000.,  550000., ...,  550000.,  550000.,  550000.],
         [ 539000.,  539000.,  539000., ...,  539000.,  539000.,  539000.],
         [ 528000.,  528000.,  528000., ...,  528000.,  528000.,  528000.],
         ...,
         [-528000., -528000., -528000., ..., -528000., -528000., -528000.],
         [-539000., -539000., -539000., ..., -539000., -539000., -539000.],
         [-550000., -550000., -550000., ..., -550000., -550000., -550000.]]),
  )
# ---
# name: TestFunctional.test_plot_common_MTFs
  tuple(
    '',
  )
# ---
# name: TestFunctional.test_relative_edge_response[mtf_slice0-5.0-1.5707963267948966]
  7.5720829278734385
# ---
# name: TestFunctional.test_relative_edge_response[mtf_slice1-10.0-0]
  0.0
# ---
# name: TestFunctional.test_relative_edge_response[mtf_slice2-0.0-0.7853981633974483]
  0.0
# ---
